--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="statusBar">#BB1C1F</color>
+    <color name="backLogin">#00162C</color>
+    <color name="red">#EA2427</color>
 </resources>
